--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,6 @@ crashlytics-build.properties
 /Assets/Blink/
 /Assets/Hovl Studi/
 /Assets/InfinitaStudio - Mountains/
+/Assets/Free Pack/
+/Assets/FREE Adventure Music Pack/
+/Assets/Fantasy Sfx/
