--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ crashlytics-build.properties
 /Assets/Free Pack/
 /Assets/FREE Adventure Music Pack/
 /Assets/Fantasy Sfx/
+/Assets/Fantasy SFX for Particle Distort Texture effect library/
