--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ crashlytics-build.properties
 /Assets/FREE Adventure Music Pack/
 /Assets/Fantasy Sfx/
 /Assets/Fantasy SFX for Particle Distort Texture effect library/
+/Assets/Bar Chair/
