--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ crashlytics-build.properties
 /Assets/Fantasy Sfx/
 /Assets/Fantasy SFX for Particle Distort Texture effect library/
 /Assets/Bar Chair/
+/Assets/Fantasy Skybox FREE/
