--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@ crashlytics-build.properties
 /Assets/Fantasy SFX for Particle Distort Texture effect library/
 /Assets/Bar Chair/
 /Assets/Fantasy Skybox FREE/
+/Assets/Wizards Code/
